--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,52 +7,8 @@ body {
   font-family: 'Arial, sans-serif';
   margin: 0;
   padding: 0;
-  background-color: #16222d;
+  background-color: white;
 }
-
-/* .product-list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-}
-
-.product-card {
-  border: 1px solid #ddd;
-  padding: 10px;
-  border-radius: 5px;
-  text-align: center;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
-}
-
-.product-image {
-  max-width: 100%;
-  height: auto;
-}
-
-.product-name {
-  font-size: 1.2em;
-  margin: 10px 0;
-}
-
-.product-price {
-  font-size: 1.1em;
-  color: #ff5733;
-}
-
-.add-to-cart-button {
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-.add-to-cart-button:hover {
-  background-color: #0056b3;
-} */
 
 .product-list {
   display: flex;
